# WEB-HW8

./: README.md  pyproject.toml
part_1_mongodb/: find_quoter.py  models.py
part_2_rabbitmq/: consumer_mail.py  consumer_sms.py  models.py  producer.py
