[tool.poetry]
name = "web-hw8"
version = "0.1.0"
description = ""
authors = ["Kiril Sheremeta <120675223+kirilsheremeta@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_hw8"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
redis = "^4.5.5"
redis-lru = "^0.1.2"
pymongo = "^4.3.3"
pika = "^1.3.2"
faker = "^18.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
